# src/modules/api/generated/openapi.json
@@ -121,6 +121,47 @@
 						}
 					}
 				]
+			},
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"error": {
+											"type": "string"
+										},
+										"path": {
+											"type": "string"
+										},
+										"deleted": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"path",
+										"deleted"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "fileName",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/health": {
